# testmcpy

./: .dockerignore  .env.example  .gitignore  .llm_providers.yaml.example  .mcp_services.yaml.backup  .mcp_services.yaml.example  .pre-commit-config.yaml  .test_profiles.yaml.example  .testmcpy-gate.yaml.example  .testmcpy.example  CHANGELOG.md  CHAT_QUICK_START.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MCP_TOKEN_OPTIMIZATION_ANALYSIS.md  PLAN.md  PROJECT.md  README.md  SECURITY.md  TODO.md  TODOS.md  TOKEN_COST_OPTIMIZATION_RESULTS.md  TUI_QUICK_REFERENCE.md  WEB_SERVER_CHECKLIST.md  __init__.py  action.yml  alembic.ini  cli-token-display-plan.md  cli.py  docker-compose.yml  list_charts_direct.py  llm_providers.yaml  mcp_services.yaml  plan.md  project.md  (+5 more)
.claude/: context.md  open_source_best_practices.md  project.md
.githooks/: commit-msg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
Formula/: README.md  testmcpy.rb
alembic/: env.py
context/: PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  mcp-testing-framework-epic.md
docs/: AUTH_CHANGES_SUMMARY.md  CHAT_INTERFACE.md  CLIENT_USAGE_GUIDE.md  MCP_PROFILES.md  index.md  presentation.html  talking_points.md
evals/: __init__.py  base_evaluators.py
examples/: auth_debug_example.py  auth_evaluators_example.py  auth_examples.py  auth_tests.yaml
integration_tests/: conftest.py
reports/: test_results.yaml
scripts/: README.md  check_no_preset_urls.sh  publish.sh
src/: llm_integration.py  mcp_client.py  (+1 more)
(+319 files in other folders)
