[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-testing-framework"
version = "1.0.0"
description = "A comprehensive testing framework for validating LLM tool calling capabilities with MCP services"
authors = [{name = "Preset", email = "support@preset.io"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "ollama>=0.1.0",
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-test = "cli:app"

[project.urls]
Homepage = "https://github.com/preset-io/testmcpy"
Repository = "https://github.com/preset-io/testmcpy"
Issues = "https://github.com/preset-io/testmcpy/issues"